# follow_up_cx

./: .gitignore  README.md  railway.toml  requirements.txt
Backend/: .flake8  .gitignore  AGENTS.md  CHAT_STREAMING.md  DATABASE.md  README.md  SESSION_ID.md  auth.py  clear_db.py  config.py  database.py  init_db.py  logging_config.py  main.py  migrate_db.py  models.py  pyproject.toml  requirements.txt  run_dev.py  schemas.py
Backend/routers/: __init__.py  auth.py  chat.py  events.py  parse.py  users.py
Backend/routers/mock/: auth.py  events.py  parse.py  users.py
Backend/services/: README.md  __init__.py  embedding_service.py  ics_service.py  image_utils.py  llm_service.py  recurrence_service.py  search_service.py
Backend/services/agent/: __init__.py  graph.py  memory.py
Backend/services/agent/prompts/: __init__.py  intent.py
Backend/services/prompts/: __init__.py  event_extraction.py
Backend/sql/: README.md  init_postgresql.sql  init_sqlite.sql  run_init.py
Backend/tests/: CHAT_TEST_README.md  README.md  chat_test.html  conftest.py  test_auth.py  test_chat.py  test_database.py  test_events.py  test_parse.py  test_search_service.py
Docs/: backend.md  production.md  production.zh.md  产品说明.md
Frontend/: todo.md
Frontend/followup/: .gitignore  README.md  README_zh.md  pubspec.yaml  updatelog.md  vercel.json
landing_page/: README.md  package.json  pnpm-lock.yaml
landing_page/app/: globals.css  (+2 more)
scripts/: README.md  add_moni_user.py  create_events.py  run_tests.bat  run_tests.py  test_api.bat  test_api.py  test_parse_image.py  test_parse_text.py
(+64 files in other folders)
